add display:grid to stylesheet

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Sacramento&display=swap" rel="stylesheet">
+
 
   </head>
   
-  <body>
+  <body id="index">
     <nav id="navbar">
       <ul>
         <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/index.html">Home</a></li>
@@ -20,13 +21,13 @@
       </ul>
     </nav>
 
-    <h1><em>Andrea Faúndez</em></h1>
-    <h3><em>“It is what we know already that often prevents us from learning.”</em><br><br>— Claude Bernard</h3>
-    <aside>
-      <img class="smaller-image" class="center" src="img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
-    </aside>
-    
-  
+    <header>
+      <h1><em>Andrea Faúndez</em></h1>
+    </header>
+    <main>
+      <h3><em>“It is what we know already that often prevents us from learning.”</em><br><br>— Claude Bernard</h3>
+    </main>
+    <img class="smaller-image" class="center" src="img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
     <footer>An EDA Kōtare 2022 project</footer>  
     <!-- this is a comment. -->
   
