--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Sacramento&display=swap" rel="stylesheet">
-
+<link href="http://fonts.cdnfonts.com/css/brandon-grotesque-regular?styles=16714,16715,16710,16711,16709,16712,16713" rel="stylesheet">
 
   </head>
   
-  <body id="index">
-    <nav id="navbar">
+  <body class="index">
+    <nav id="navbar" class="nav">
       <ul>
         <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/index.html">Home</a></li>
         <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/blog/tech-blog.html">Tech Blog</a></li>
         <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/blog/cultural-blog.html">Cultural Blog</a></li>
-        <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/blog/about-me.html">About me</a></li>
+        <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/blog/about-me.html">About Me</a></li>
       </ul>
     </nav>
 
-    <header>
+    <header class="header">
       <h1><em>Andrea Faúndez</em></h1>
     </header>
-    <main>
-      <h3><em>“It is what we know already that often prevents us from learning.”</em><br><br>— Claude Bernard</h3>
+    <main  class="main">
+      <h3>“It is what we know already that<br>often prevents us from learning."<br><br>— Claude Bernard</h3>
     </main>
-    <img class="smaller-image" class="center" src="img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
-    <footer>An EDA Kōtare 2022 project</footer>  
+    <img class="smaller-image img" src="img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
+
+    <footer class="footer">An EDA Kōtare 2022 project</footer>  
     <!-- this is a comment. -->
   
   </body>
