--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
-<link href="http://fonts.cdnfonts.com/css/brandon-grotesque-regular?styles=16714,16715,16710,16711,16709,16712,16713" rel="stylesheet">
-
+    <link href="http://fonts.cdnfonts.com/css/brandon-grotesque-regular?styles=16714,16715,16710,16711,16709,16712,16713" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   </head>
   
   <body class="index">
@@ -15,8 +17,8 @@
       <ul>
         <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/index.html">Home</a></li>
         <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/blog/tech-blog.html">Tech Blog</a></li>
-        <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/blog/cultural-blog.html">Cultural Blog</a></li>
-        <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/blog/about-me.html">About Me</a></li>
+        <li><a href="#" target="_self">Cultural Blog</a></li>
+        <li><a href="#" target="_self">About Me</a></li>
       </ul>
     </nav>
 
