change px for % em and vw

--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
         <li><a href="#" target="_self">About Me</a></li>
       </ul>
     </nav>
-
-    <header class="header">
-      <h1><em>Andrea Faúndez</em></h1>
-    </header>
-    <main  class="main">
-      <h3>“It is what we know already that<br>often prevents us from learning."<br><br>— Claude Bernard</h3>
-    </main>
+    <text class="header">
+      <h1><em>Andrea Faúndez</em></h1> 
+    <h3>“It is what we know already that<br>often prevents us from learning."<br><br>— Claude Bernard</h3>
+    </text>
+    
     <img class="smaller-image img" src="img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
-
-    <footer class="footer">An EDA Kōtare 2022 project</footer>  
+    
+    <footer class="footer-home">Kōtare 2022</footer>  
     <!-- this is a comment. -->
   
   </body>
