nest grid in grid

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   </head>
   
-  <body class="index">
+  <body id="body-grid">
     <nav id="navbar" class="nav">
       <ul>
         <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/index.html">Home</a></li>
@@ -21,14 +21,18 @@
         <li><a href="#" target="_self">About Me</a></li>
       </ul>
     </nav>
-    <text class="header">
-      <h1><em>Andrea Faúndez</em></h1> 
-    <h3>“It is what we know already that<br>often prevents us from learning."<br><br>— Claude Bernard</h3>
-    </text>
+    <main id="inner-grid">
+      <text class="header">
+        <h1>Andrea Faúndez</h1> 
+
+        <h3>“It is what we know already that<br>often prevents us from learning."<br><br>— Claude Bernard</h3>
+      </text>
+
+      <img class="home-image" src="img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
+
+    </main>
     
-    <img class="smaller-image img" src="img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
-    
-    <footer class="footer-home">Kōtare 2022</footer>  
+    <footer>Kōtare 2022</footer>  
     <!-- this is a comment. -->
   
   </body>
