cahage links in pages

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body id="body-grid">
     <nav id="navbar" class="nav">
       <ul>
-        <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/index.html">Home</a></li>
-        <li><a target="_self" href="file:///Users/andreafaundez/dev-academy/andrea-faundez.github.io/blog/tech-blog.html">Tech Blog</a></li>
+        <li><a target="_self" href="https://andrea-faundez.github.io/index.html">Home</a></li>
+        <li><a target="_self" href="https://andrea-faundez.github.io/blog/tech-blog.html">Tech Blog</a></li>
         <li><a href="#" target="_self">Cultural Blog</a></li>
         <li><a href="#" target="_self">About Me</a></li>
       </ul>
