change photo links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <link href="styles/main.css" rel="stylesheet" type="text/css">
+    <link href="https://andrea-faundez.github.io/styles/main.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.cdnfonts.com/css/brandon-grotesque-regular?styles=16714,16715,16710,16711,16709,16712,16713" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;700;800;900&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
         <h3>“It is what we know already that<br>often prevents us from learning."<br><br>— Claude Bernard</h3>
       </text>
 
-      <img class="home-image" src="img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
+      <img class="home-image" src="https://andrea-faundez.github.io/img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
 
     </main>
     
