--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <link href="https://andrea-faundez.github.io/styles/main.css" rel="stylesheet" type="text/css">
+    <link href="../andrea-faundez.github.io/styles/main.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.cdnfonts.com/css/brandon-grotesque-regular?styles=16714,16715,16710,16711,16709,16712,16713" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;700;800;900&display=swap" rel="stylesheet">
