write my learning plan

--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
     <main id="inner-grid">
       <text class="header">
         <h1>Andrea Faúndez</h1> 
-
-        <h3>“It is what we know already that<br>often prevents us from learning."<br><br>— Claude Bernard</h3>
+        <h3 class="h3">“It is what we know already that<br>often prevents us from learning."<br><br>— Claude Bernard</h3>
       </text>
-
       <img class="home-image" src="https://andrea-faundez.github.io/img/with-baby-4.jpg" alt="a mum holding her baby on a walk.">
-
     </main>
     
     <footer>Kōtare 2022</footer>  
